<resources>
    <string name="app_name">minitiktok</string>
    <string name="first_page">首页</string>
    <string name="friend">朋友</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="post_video">发布视频</string>
    <string name="login">登录</string>
    <string name="login1">账号密码登录</string>
    <string name="login2">已阅读并同意 用户协议 和 隐私协议</string>
    <string name="login_hint1">   请输入账号</string>
    <string name="login_hint2">   请输入密码</string>



</resources>