<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackColor"
    android:clipChildren="false"
    tools:context=".activity.MainActivity2">

    <androidx.recyclerview.widget.RecyclerView
        android:id = "@+id/video_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <FrameLayout
        android:id="@+id/frame_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation_bar" />

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/first_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/first_page"
            android:textColor="@color/ButtonTextColor"
            android:gravity="center" />

        <TextView
            android:id="@+id/friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/friend"
            android:textColor="@color/ButtonTextColor"
            android:gravity="center" />

        <ImageView
            android:id="@+id/post_video"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@mipmap/video"
            android:contentDescription="@string/post_video" />

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/message"
            android:textColor="@color/ButtonTextColor"
            android:gravity="center" />

        <TextView
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/me"
            android:textColor="@color/ButtonTextColor"
            android:gravity="center" />

    </LinearLayout>

</RelativeLayout>