<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="40dp"
        android:alpha="1.0"
        android:text="@string/login1"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_user_account"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_user_account"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/login_button_background"
        android:ems="11"
        android:hint="@string/login_hint1"
        android:inputType="textPersonName"
        android:lines="2"
        android:textColor="@color/white"
        android:textColorHint="#ffffff"
        android:textCursorDrawable="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_user_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_user_account"
        android:layout_alignStart="@+id/edit_user_account"
        android:layout_alignLeft="@+id/edit_user_account"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/login_button_background"
        android:ems="10"
        android:hint="@string/login_hint2"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#ffffff"
        android:textCursorDrawable="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_user_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="316dp"
        android:alpha="1.0"
        android:text="@string/login2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_login"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="236dp"
        android:background="@mipmap/login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>